<resources>
    <string name="app_name">Simulasi TOEFL</string>
    <string name="username">Muhamad Ihsan Ashari</string>
    <string name="nim">171011401469</string>
    <string name="exit">Keluar</string>
    <string name="edit_data">Edit data</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="practice_description">Eksplorasi lebih banyak latihan berdasarkan tiga kategori soal. Pada Menu Practice ini kamu dapat mengerjakan berkali-kali, tanpa ada batasan!</string>
    <string name="practice">Practice</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="structure">Structure</string>
    <string name="main_menu">Menu utama</string>
    <string name="scores">Scores</string>
    <string name="info">Info</string>
    <string name="scores_description">Lihat dan amati hasil pencapaian belajar kamu selama ini. Pilih kategori untuk melihat score.</string>
    <string name="listening_score">Listening Score</string>
    <string name="reading_score">Reading Score</string>
    <string name="structure_score">Structure Score</string>
    <string name="pre_test_score">Pre Test Score</string>
    <string name="post_test_score">Post Test Score</string>
    <string name="complete_toefl_test_score">Complete TOEFL Test score</string>
    <string name="testing">Testing</string>
    <string name="testing_description">Uji kemampuan kamu! Pada menu Testing ini kamu akan disajikan soal prediksi TOEFL, dan nilai kamu akan dicatat sebagai nilai latihan.</string>
    <string name="individual_test">Individual Test</string>
    <string name="complete_toefl_test">Complete Toefl Test</string>
    <string name="exit_section">Exit section</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="complete_toefl_test_1">Complete TOEFL Test 1</string>
    <string name="complete_toefl_test_2">Complete TOEFL Test 2</string>
    <string name="listening_test">Listening Test</string>
    <string name="reading_test">Reading Test</string>
    <string name="structure_test">Structure Test</string>
    <string name="practice_listening">Practice - Listening</string>
    <string name="short_dialogues">Short Dialogues</string>
    <string name="casual_convertation">Casual Convertation</string>
    <string name="academic_discussions">Academic Discussions</string>
    <string name="academic_lectures">Academic Lectures</string>
    <string name="practice_reading">Practice - Reading</string>
    <string name="easy_passages">Easy Passages</string>
    <string name="medium_passages">Medium Passages</string>
    <string name="difficult_passages">Difficult Passages</string>
    <string name="practice_structure">Practice - Structure</string>
    <string name="written_expression">Written Expression</string>
</resources>