<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/menu_practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/playfair_regular"
        android:textSize="18sp"
        android:textColor="@color/dark_grey"
        android:text="@string/practice_listening"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_practice"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_shortdialogues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/short_dialogues"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_casual_conv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/casual_convertation"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_academic_disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/academic_discussions"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_academic_lect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/academic_lectures"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

    </LinearLayout>

</RelativeLayout>