<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32dp"
    tools:context=".ProfileActivity">

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/iv_avatar"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="32dp"
      android:layout_centerHorizontal="true"
      android:src="@drawable/ic_avatar"/>

  <TextView
      android:id="@+id/tv_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/iv_avatar"
      android:layout_marginTop="32dp"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:fontFamily="@font/playfair_bold"
      android:textSize="24sp"
      android:text="@string/username"/>

  <TextView
      android:id="@+id/tv_nim"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tv_username"
      android:layout_marginTop="4dp"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:fontFamily="@font/poppins_regular"
      android:textSize="18sp"
      android:text="@string/nim" />

  <Button
      android:id="@+id/btn_logout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/btn_secondary"
      android:text="@string/exit"
      android:layout_alignParentBottom="true"
      android:textAllCaps="false"
      android:textSize="18sp"
      android:textColor="@color/black"
      android:fontFamily="@font/poppins_regular"
      app:backgroundTint="@null"/>

  <Button
      android:id="@+id/btn_edit_data"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/btn_logout"
      android:background="@drawable/btn_primary"
      android:textColor="@color/black"
      android:text="@string/edit_data"
      android:textSize="18sp"
      android:fontFamily="@font/poppins_regular"
      android:textAllCaps="false"
      android:layout_marginBottom="8dp"
      app:backgroundTint="@null"/>

  </RelativeLayout>