<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/white"
    tools:context=".practice.ReadingSectionActivity">

    <Button
        android:id="@+id/btn_exit_section"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/btn_cancel"
        android:layout_alignParentTop="true"
        android:text="@string/exit_section"
        android:textColor="@color/danger_color"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        app:backgroundTint="@null"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_exit_section"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Question: 1/x"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">


            <RadioButton
                android:id="@+id/radio_button_1"
                android:text="Option 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/radio_button_2"
                android:text="Option 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>

            <RadioButton
                android:id="@+id/radio_button_3"
                android:text="Option 3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>

            <RadioButton
                android:id="@+id/radio_button_4"
                android:text="Option 4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:textColor="@color/black"
                android:buttonTint="@color/black"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/prev"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:backgroundTint="@null" />

</RelativeLayout>